--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/card.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/radio.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
